# llm_based_reviews_clustering

./: .env  .gitignore  README.md  main.py  pyproject.toml  test.pkl
configs/: README.md
configs/runs/: example.yaml  traditional_baseline.yaml
configs/schemas/: extraction_schema_v1.json
configs/taxonomy/: aspect_allowlist.csv  aspect_synonyms.csv  noise_terms.csv
docs/: README.md  Untitled  传统方法设计.md  系统架构设计文档.md  聚类规范.md  软件设计文档.md  附录 A：LLM 结构化输出 Schema 规范（Extraction & Insight）.md  附录 B：DuckDB 中间表与版本字段规范（复现、审计、断点续跑）.md  项目文件规范.md
scripts/: README.md  cleanup_resume.py  export_clusters_to_csv.py
src/: README.md
src/agents/: README.md  __init__.py  aspect_sentiment_extractor_agent.py  base_agent.py  cluster_insight_agent.py  data_selector_agent.py  evaluation_agent.py  extraction_judge_agent.py  issue_cluster_agent.py  meta_context_agent.py  opinion_candidate_filter_agent.py  preprocess_agent.py  report_assembler_agent.py  sentence_builder_agent.py  traditional_aspect_sentiment_extractor_agent.py  traditional_cluster_insight_agent.py  traditional_extraction_judge_agent.py
src/app/: __init__.py  orchestrator.py
src/models/: __init__.py  embedding_wrapper.py  llm_wrapper.py
src/pipelines/: __init__.py  pipeline.py
src/storage/: README.md  __init__.py  connection.py  table_manager.py  version_fields.py
src/tools/: README.md  __init__.py  clustering_tool.py  duckdb_tool.py  embedding_tool.py  logging_tool.py  reranker_tool.py  structured_output_tool.py
tests/: README.md  __init__.py  test_config_loader.py  test_normalizer.py  test_version_fields.py
(+8 files in other folders)
